# simple-rpc-editor

./: .gitignore  .npmrc  LICENSE  README.md  license.md  neutralino.config.json  package-lock.json  package.json  vue.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: debug.yml  release-builds.yml  release.yml  test-builds.yml
jenkinsscripts/: jenkins-build.txt  jenkins-github-publish.txt  jenkins-release.txt
public/: index.html
resources/: index.html
resources/assets/css/: argon.css  editor.css  main.css
resources/assets/js/: app-main.js  argon.js  fast-toml.js
src/: App.vue  background.js  main.js  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: index.html  main.rs
src-tauri/src/assets/css/: editor.css
src-tauri/src/assets/js/: app-main.js  fast-toml.js  logger.tauri.js
src/assets/css/: app.css
src/components/: AboutSplash.vue  ChangelogSplash.vue  NoConfigSplash.vue  SplashScreen.vue  TestSection.vue
src/scripts/: TauriLogger.js  appFunctions.js  editorFunctions.js  editorUtils.js  fast-toml.js  help.js
