[package]
name = "simple-rpc-editor"
version = "2.0.2"
description = "Simple RPC Config Editor App"
authors = ["HypherionSA"]
license = "MIT"
repository = ""
default-run = "simple-rpc-editor"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["api-all", "updater"] }
discord-rpc-client = { git = "https://github.com/lennartkloock/discord-rpc-client.rs.git", branch = "master" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
